  * Release ImageMagick version 7.0.10-7, GIT revision 17...

2020-04-07  7.0.10-7 Cristy  <quetzlzacatenango@image...>
  * Fix erroneous "insufficient image data" exception (reference
    https://github.com/ImageMagick/ImageMagick/issues/1883).
  * Fix an unconditional jump for the XPM coder (reference
    https://github.com/ImageMagick/ImageMagick/issues/1895).

    https://github.com/ImageMagick/ImageMagick/discussions/1880).
2020-04-06  7.0.10-6 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-6, GIT revision 17146:634bbfd:20200406.

2020-04-05  7.0.10-5 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-5, GIT revision 17143:8be18423e:20200405.

2020-04-05  7.0.10-5 Cristy  <quetzlzacatenango@image...>
 * Default inkscape delegate to version 0.92 (reference
    https://github.com/ImageMagick/ImageMagick/discussions/1880).
  * Set monochrome image depth to 1 for Group4 compression.

2020-04-05  7.0.10-4 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-4, GIT revision 17137:eeff0b6:20200405

2020-03-28  7.0.10-4 Cristy  <quetzlzacatenango@image...>
  * The X max attribute for certain fonts is zero (reference
    https://imagemagick.org/discourse-server/viewtopic.php?f=1&t=37723).
  * Multi-value of jp2:quality does not work (reference
    https://github.com/ImageMagick/ImageMagick/issues/1873).
  * Return EPS & TIFF images from the EPT image format (reference
    https://imagemagick.org/discourse-server/viewtopic.php?f=3&t=37781).

2020-03-27  7.0.10-3 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-3, GIT revision 17108:5a4f5a9:20200327.

2020-03-22  7.0.10-3 Cristy  <quetzlzacatenango@image...>
  * The -charcoal option should ignore the alpha channel.
  * Fix numerical instability issue when drawing lines
  * Improve mono font rendering (reference
    https://imagemagick.org/discourse-server/viewtopic.php?f=1&t=37723).
