@@ -1099,31 +1099,15 @@ typedef struct _CaliperInfo
     v;
 } CaliperInfo;
 
-static double getAngle(PointInfo *p,PointInfo *q)
+static inline double getAngle(PointInfo *p,PointInfo *q)
 {
-  double
-    angle;
-
   /*
     Get the angle between line (p,q) and horizontal axis, in degrees.
   */
-  if (fabs(q->x-p->x) < MagickEpsilon)
-    {
-      if (q->y > p->y)
-        return(90.0);
-      return(270.0);
-    }
-  angle=RadiansToDegrees(atan2(fabs(q->y-p->y),fabs(q->x-p->x)));
-  if ((p->x < q->x) && (p->y <= q->y))
-    return(angle);
-  if ((p->x > q->x) && (p->y < q->y))
-    return(angle+90.0);
-  if ((p->x > q->x) && (p->y >= q->y))
-    return(angle+180.0);
-  return(360.0-angle);
+  return(RadiansToDegrees(atan2(q->y-p->y,q->x-p->x)));
 }
 
-static double getDistance(PointInfo *p,PointInfo *q)
+static inline double getDistance(PointInfo *p,PointInfo *q)
 {
   double
     distance;
@@ -1132,7 +1116,7 @@ static double getDistance(PointInfo *p,PointInfo *q)
   return(distance*distance);
 }
 
-static double getProjection(PointInfo *p,PointInfo *q,PointInfo *v)
+static inline double getProjection(PointInfo *p,PointInfo *q,PointInfo *v)
 {
   double
     distance;
@@ -1146,7 +1130,7 @@ static double getProjection(PointInfo *p,PointInfo *q,PointInfo *v)
   return((q->x-p->x)*(v->x-p->x)+(v->y-p->y)*(q->y-p->y))/sqrt(distance);
 }
 
-static double getFeretDiameter(PointInfo *p,PointInfo *q,PointInfo *v)
+static inline double getFeretDiameter(PointInfo *p,PointInfo *q,PointInfo *v)
 {
   double
     distance;
@@ -1166,9 +1150,13 @@ MagickExport PointInfo *GetImageMinimumBoundingBox(Image *image,
   CaliperInfo
     caliper_info;
 
+  const char
+    *artifact;
+
   double
     angle,
-    diameter;
+    diameter,
+    distance;
 
   PointInfo
     *bounding_box,
@@ -1290,9 +1278,6 @@ MagickExport PointInfo *GetImageMinimumBoundingBox(Image *image,
     GetMagickPrecision(),caliper_info.height);
   (void) FormatImageProperty(image,"minimum-bounding-box:angle","%.*g",
     GetMagickPrecision(),RadiansToDegrees(angle));
-  (void) FormatImageProperty(image,"minimum-bounding-box:unrotate","%.*g",
-    GetMagickPrecision(),getAngle(&vertices[caliper_info.p],
-    &vertices[caliper_info.q]));
   (void) FormatImageProperty(image,"minimum-bounding-box:_p","%.*g,%.*g",
     GetMagickPrecision(),vertices[caliper_info.p].x,
     GetMagickPrecision(),vertices[caliper_info.p].y);
@@ -1302,6 +1287,89 @@ MagickExport PointInfo *GetImageMinimumBoundingBox(Image *image,
   (void) FormatImageProperty(image,"minimum-bounding-box:_v","%.*g,%.*g",
     GetMagickPrecision(),vertices[caliper_info.v].x,
     GetMagickPrecision(),vertices[caliper_info.v].y);
+  /*
+    Find smallest angle to origin.
+  */
+  distance=hypot(bounding_box[0].x,bounding_box[0].y);
+  angle=getAngle(&bounding_box[0],&bounding_box[1]);
+  for (i=1; i < 4; i++)
+  {
+    double d = hypot(bounding_box[i].x,bounding_box[i].y);
+    if (d < distance)
+      {
+        distance=d;
+        angle=getAngle(&bounding_box[i],&bounding_box[(i+1) % 4]);
+      }
+  }
+  (void) FormatImageProperty(image,"minimum-bounding-box:unrotate","%.*g",
+    GetMagickPrecision(),-angle);
+  artifact=GetImageArtifact(image,"minimum-bounding-box:aspect");
+//  if (artifact != (const char *) NULL)
+    {
+      double
+        length,
+        q_length,
+        p_length;
+
+      PointInfo
+        delta,
+        point;
+
+      /*
+        Find smallest perpendicular distance from edge to origin.
+      */
+      point=bounding_box[0];
+      for (i=1; i < 4; i++)
+      {
+        if (bounding_box[i].x < point.x)
+          point.x=bounding_box[i].x;
+        if (bounding_box[i].y < point.y)
+          point.y=bounding_box[i].y;
+      }
+      for (i=0; i < 4; i++)
+      {
+        bounding_box[i].x-=point.x;
+        bounding_box[i].y-=point.y;
+      }
+      for (i=0; i < 4; i++)
+      {
+        double
+          d,
+          intercept,
+          slope;
+
+        delta.x=bounding_box[(i+1) % 4].x-bounding_box[i].x;
+        delta.y=bounding_box[(i+1) % 4].y-bounding_box[i].y;
+        slope=delta.y*PerceptibleReciprocal(delta.x);
+        intercept=bounding_box[(i+1) % 4].y-slope*bounding_box[i].x;
+        d=fabs((slope*bounding_box[i].x-bounding_box[i].y+intercept)*
+          PerceptibleReciprocal(sqrt(slope*slope+1.0)));
+        if ((i == 0) || (d < distance))
+          {
+            distance=d;
+            point=delta;
+          }
+      }
+      angle=RadiansToDegrees(atan(point.y*PerceptibleReciprocal(point.x)));
+      length=hypot(point.x,point.y);
+      p_length=fabs((double) MagickMax(caliper_info.width,caliper_info.height)-
+        length);
+      q_length=fabs(length-(double) MagickMin(caliper_info.width,
+        caliper_info.height));
+      if (LocaleCompare(artifact,"landscape") == 0)
+        {
+          if (p_length > q_length)
+            angle+=(angle < 0.0) ? 90.0 : -90.0;
+        }
+      else
+        if (LocaleCompare(artifact,"portrait") == 0)
+          {
+            if (p_length < q_length)
+              angle+=(angle >= 0.0) ? 90.0 : -90.0;
+          }
+      (void) FormatImageProperty(image,"minimum-bounding-box:unrotate","%.*g",
+        GetMagickPrecision(),-angle);
+    }
   vertices=(PointInfo *) RelinquishMagickMemory(vertices);
   return(bounding_box);
 }
